# comfyui-remote

./: .env  .flake8  .gitignore  CMakeLists.txt  PROJECT  README.cli.md  README.md  RELEASE_NOTES.rst  comfyui-remote-architecture.puml  create_tests.bat  dnpkg.xml  setup.py  tox.ini
configs/: base.windows.yaml
docs/: index.rst  new_architecture.puml
docs/api/: index.rst
docs/user/: index.rst
old/comfyui_remote/: logging_config.py  test.py  validate.py
src/comfyui_remote/: README.txt  __init__.py  _version.py  config.py  dispatch.py  dncomfyui_remote.sh  job_runner.py  launcher.py  logging_config.py  test.py  validate.py
test/: chat  comfyui_remote_test.py  humfile.py  smoke_test.py
test/fixtures/: __init__.py
tests/: README.md  run_steps.py  run_unit.py
tests/.comfy_outputs/: 0c4d788c-c707-4f8e-93ad-9e0fa4e5c014.json  1df4dfcd-97e6-4a99-a914-f83c60a6bc11.json  39f93761-9e04-48ca-a4af-52386616aac5.json  53c58f2c-25f3-49c4-abb1-db8c6f74d5bb.json  58db98ca-3260-45eb-a5a6-0b06815c6d7c.json  66f14c5e-3ee1-4744-a5fb-026e6dbc9022.json  74abf372-6ca5-493e-af07-9939c5736581.json  7c7969d6-696e-4886-8597-7aec1e96d7d0.json
tests/cmd/: attach_latest.bat  list.bat  smoke_local_flow.bat
tests/e2e/: run_demo.py  run_demo_manager_remote.py  run_demo_manager_remote_workflow_centric.py  run_demo_txt2img.py  test_config_layering_repo_defaults.py  test_finalize_merges_layers.py  test_wokflow_nodebase.py
tests/steps/: test_01_server.py  test_02_connect_ws.py  test_03_post_prompt.py  (+7 more)
uml/: class-diagram.puml  component.puml  sequence-local.puml  sequence-remote.puml
(+187 files in other folders)
